--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header a {
   --background: #282a36;
   --background-secondary: #44475a;
   --text: #f8f8f2;
-  --pink: #ff79c6;
+  --pink: #fb97cf;
   --yellow: #f1fa8c;
   --cyan: #8be9fd;
   --green: #50fa7b;
@@ -109,10 +109,122 @@ li a:hover,
   font-weight: 300;
 }
 
-.readStatus {
+.read {
   color: var(--green);
 }
 
 .notRead {
   color: var(--pink);
+}
+
+.btn {
+  border-radius: 15px;
+  border: none;
+  outline: none;
+  height: 100%;
+  background-color: #585c7447;
+  font-size: 120px;
+  color: var(--background);
+  cursor: pointer;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1em;
+  border: none;
+  background: var(--background-secondary);
+  border-radius: 15px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  width: max-content;
+  z-index: 1000;
+  color: var(--background);
+}
+
+.modal h2 {
+  font-weight: 990;
+  font-size: 28px;
+  text-align: center;
+}
+
+.btns {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+.modal input {
+  margin-top: 10px;
+  background-color: var(--background);
+  outline: none;
+  border: none;
+  padding: 10px;
+  width: 100%;
+  border-radius: 10px;
+  color: var(--text);
+}
+
+.modal::backdrop {
+  background-color: #282a36;
+  opacity: 0.6;
+}
+
+.modal button {
+  margin-top: 10px;
+  outline: none;
+  border: none;
+  padding: 10px;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.dialog-confirm {
+  background-color: var(--green);
+  opacity: 0.4;
+  color: #282a36;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.3s;
+}
+
+.close-modal {
+  background-color: var(--cyan);
+  opacity: 0.4;
+  color: #282a36;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.3s;
+}
+
+.close-modal:hover {
+  opacity: 0.65;
+}
+.dialog-confirm:hover {
+  opacity: 0.65;
+}
+
+.checkbox {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+  color: var(--background);
+  font-size: 18px;
+  font-weight: bold;
+  gap: 10px;
+  padding: 20px 0 10px 0;
+}
+
+.checkbox select {
+  border: none;
+  border-radius: 8px;
+  outline: none;
+  padding: 10px;
+
+  background-color: var(--background);
+  color: var(--text);
+  height: max-content;
 }
