--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ li a:hover,
   justify-content: end;
   color: var(--background);
   font-size: 18px;
+
   font-weight: bold;
   gap: 10px;
   padding: 20px 0 10px 0;
@@ -227,4 +228,15 @@ li a:hover,
   background-color: var(--background);
   color: var(--text);
   height: max-content;
+}
+
+.title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.title img {
+  height: 25px;
+  cursor: pointer;
 }
